--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -8,27 +8,36 @@
 <body>
     <h1>Política de Privacidade</h1>
     <p>
-        Esta extensão do Chrome, "Salvar URL", respeita a sua privacidade. Não coletamos, armazenamos ou compartilhamos dados pessoais sem o seu consentimento explícito. 
-        Os dados capturados pela extensão são utilizados exclusivamente para a funcionalidade pretendida: envio de informações de perfil do LinkedIn para sua API interna.
+        Esta extensão do Chrome, "Salvar URL", respeita a sua privacidade e está em conformidade com a Lei Geral de Proteção de Dados (LGPD). 
+        A extensão tem como única finalidade capturar dados de perfis públicos no LinkedIn e enviá-los ao sistema Easy Recruter, onde serão armazenados e tratados conforme descrito na política de privacidade do Easy Recruter.
     </p>
     <h2>Finalidade do Tratamento de Dados</h2>
     <p>
-        Os dados coletados, como nome, contato e informações profissionais, são utilizados exclusivamente para manter um banco de talentos. 
-        A finalidade principal é permitir que possamos entrar em contato com candidatos sobre oportunidades de trabalho que possam surgir e sejam compatíveis com seu perfil.
+        A extensão "Salvar URL" coleta dados como nome, contato e informações profissionais de perfis do LinkedIn. 
+        Esses dados são transmitidos diretamente ao Easy Recruter, onde:
+        <ul>
+            <li>Serão armazenados e organizados por recrutadores técnicos;</li>
+            <li>Serão utilizados exclusivamente para fins de recrutamento e seleção de candidatos.</li>
+        </ul>
+        <strong>Importante:</strong> O "Salvar URL" não armazena, processa ou acessa dados coletados, sendo apenas uma ferramenta de captura e transmissão.
     </p>
     <h2>Base Legal para o Tratamento</h2>
     <p>
-        De acordo com a Lei Geral de Proteção de Dados (LGPD), utilizamos os dados coletados com base no princípio do "legítimo interesse", conforme o Art. 7º, inciso IX. 
-        Isso significa que os dados são tratados para propósitos que sejam necessários e proporcionais, sempre com o objetivo de facilitar a comunicação com os candidatos sobre oportunidades de emprego relevantes.
+        A coleta e transmissão de dados pela extensão são realizadas com base no princípio do <strong>"legítimo interesse"</strong>, conforme o Art. 7º, inciso IX da LGPD. 
+        O tratamento completo dos dados ocorre no Easy Recruter, com responsabilidade de armazenamento e gerenciamento por parte dos recrutadores.
+    </p>
+    <h2>Responsabilidade pelo Tratamento</h2>
+    <p>
+        Os desenvolvedores da extensão "Salvar URL" não armazenam ou processam dados. 
+        A responsabilidade pelo uso, armazenamento e segurança dos dados é do sistema Easy Recruter e de seus usuários (recrutadores).
     </p>
     <h2>Direitos dos Titulares de Dados</h2>
     <p>
         Em conformidade com a LGPD, os titulares têm o direito de:
         <ul>
-            <li>Solicitar a exclusão de seus dados do banco de talentos;</li>
-            <li>Requerer informações sobre como seus dados estão sendo utilizados;</li>
-            <li>Atualizar ou corrigir informações pessoais;</li>
-            <li>Revogar o consentimento para o uso de dados, quando aplicável.</li>
+            <li>Revogar o consentimento para uso dos dados;</li>
+            <li>Solicitar a exclusão de seus dados do sistema Easy Recruter;</li>
+            <li>Consultar e corrigir informações pessoais armazenadas no sistema.</li>
         </ul>
     </p>
     <p>
@@ -36,12 +45,12 @@
     </p>
     <h2>Período de Retenção</h2>
     <p>
-        Os dados permanecerão armazenados em nosso sistema pelo período necessário para cumprir as finalidades mencionadas ou até que o titular solicite sua exclusão.
+        Os dados coletados permanecem armazenados no Easy Recruter enquanto forem necessários para as finalidades de recrutamento ou até que o titular solicite sua exclusão.
     </p>
     <h2>Dados Sensíveis</h2>
     <p>
-        Esta extensão não coleta nem trata dados sensíveis, como definidos pela LGPD: informações sobre origem racial ou étnica, convicção religiosa, opinião política, 
-        filiação sindical, dados de saúde, genéticos, biométricos, vida sexual ou orientação sexual. Caso esses dados sejam coletados em cenários futuros, o consentimento explícito será solicitado.
+        O "Salvar URL" e o Easy Recruter não coletam nem tratam dados sensíveis, como definidos pela LGPD (ex.: origem racial, religião, saúde, orientação sexual). 
+        Caso esses dados sejam requisitados no futuro, o consentimento explícito será solicitado.
     </p>
     <p>Última atualização: 6 de dezembro de 2024</p>
 </body>
