--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -8,18 +8,18 @@
 <body>
     <h1>Política de Privacidade</h1>
     <p>
-        Esta extensão do Chrome, "Salvar URL", respeita a sua privacidade e está em conformidade com a Lei Geral de Proteção de Dados (LGPD). 
+        Esta extensão do Chrome, "Salvar Perfil", respeita a sua privacidade e está em conformidade com a Lei Geral de Proteção de Dados (LGPD). 
         A extensão tem como única finalidade capturar dados de perfis públicos no LinkedIn e enviá-los ao sistema Easy Recruter, onde serão armazenados e tratados conforme descrito na política de privacidade do Easy Recruter.
     </p>
     <h2>Finalidade do Tratamento de Dados</h2>
     <p>
-        A extensão "Salvar URL" coleta dados como nome, contato e informações profissionais de perfis do LinkedIn. 
+        A extensão "Salvar Perfil" coleta dados como nome, contato e informações profissionais de perfis do LinkedIn. 
         Esses dados são transmitidos diretamente ao Easy Recruter, onde:
         <ul>
             <li>Serão armazenados e organizados por recrutadores técnicos;</li>
             <li>Serão utilizados exclusivamente para fins de recrutamento e seleção de candidatos.</li>
         </ul>
-        <strong>Importante:</strong> O "Salvar URL" não armazena, processa ou acessa dados coletados, sendo apenas uma ferramenta de captura e transmissão.
+        <strong>Importante:</strong> O "Salvar Perfil" não armazena, processa ou acessa dados coletados, sendo apenas uma ferramenta de captura e transmissão.
     </p>
     <h2>Base Legal para o Tratamento</h2>
     <p>
@@ -28,7 +28,7 @@
     </p>
     <h2>Responsabilidade pelo Tratamento</h2>
     <p>
-        Os desenvolvedores da extensão "Salvar URL" não armazenam ou processam dados. 
+        Os desenvolvedores da extensão "Salvar Perfil" não armazenam ou processam dados. 
         A responsabilidade pelo uso, armazenamento e segurança dos dados é do sistema Easy Recruter e de seus usuários (recrutadores).
     </p>
     <h2>Direitos dos Titulares de Dados</h2>
